TGR-444: added goal to start test env mgr via maven plugin, refactored log...